--- a/index.html
+++ b/index.html
@@ -9,16 +9,8 @@
       sizes="32x32"
       href="./images/favicon-32x32.png"
     />
+    <link rel="stylesheet" href="./styles/style.css" />
     <title>Frontend Mentor | 3-column preview card component</title>
-    <style>
-      .attribution {
-        font-size: 11px;
-        text-align: center;
-      }
-      .attribution a {
-        color: hsl(228, 45%, 44%);
-      }
-    </style>
   </head>
   <body>
     <div class="flex-container">
@@ -55,7 +47,7 @@
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
-      >. Coded by <a href="#">Vaida</a>.
+      >. Coded by <a href="https://github.com/Ereja" target="_blank">Vaida</a>.
     </div>
   </body>
 </html>
